--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -79,8 +79,7 @@ jobs:
           pwd
           ls /home/runner/work/magasins/magasins
           mkdir -p "$HOME/.dbt"
-          mkdir -p "$HOME/.dbt"
-          cp -v profiles.yml "$HOME/.dbt/profiles.yml"
+          cp profiles.yml "$HOME/.dbt/profiles.yml"
           echo "Placed profiles at $HOME/.dbt/profiles.yml"
 
       - name: Setup Python
