debug profile.yaml path DBT

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -28,11 +28,8 @@ jobs:
 
       - name: Prepare dbt profiles
         run: |
-          ls
-          pwd
-          ls /home/runner/work/magasins/magasins
           mkdir -p "$HOME/.dbt"
-          cp -v profiles.yml "$HOME/.dbt/profiles.yml"
+          cp ./profile.yml ~/.dbt/profiles.yml
           echo "Placed profiles at $HOME/.dbt/profiles.yml"
 
       - name: Setup Python
@@ -75,11 +72,8 @@ jobs:
       
       - name: Prepare dbt profiles
         run: |
-          ls
-          pwd
-          ls /home/runner/work/magasins/magasins
           mkdir -p "$HOME/.dbt"
-          cp profiles.yml "$HOME/.dbt/profiles.yml"
+          cp ./profile.yml ~/.dbt/profiles.yml
           echo "Placed profiles at $HOME/.dbt/profiles.yml"
 
       - name: Setup Python
